Changes to about page content

--- a/about.html
+++ b/about.html
@@ -127,6 +127,19 @@ description: "Learn more about my hobbies, interests, and background"
 					</p>
 				</ul>
 			</div>
+			<div id="random">
+					<ul>
+						<h5> More++</h5>
+						<p>I'm thankful to be interested in so many different things, the biggest thing I wish for is more time
+							in the day to be able to get around to all of them.
+						</p>
+						<li>🎖️ Coaching/Mentoring (Volleyball, Speech & Debate, Tech) </li>
+						<li>🚗 Working on my car (I bought it off a farm and rebuilt it over a summer!)</li>
+						<li>📺 Anime (Favorites: Neon Genesis Evangelion, Jojo's Bizarre Adventure, Code Geass, Gurren Lagann, Megalobox, Haikyuu!, My Hero Academia) </li>
+						
+					</ul>
+				</div>
+			
 
 		
 
