more changes for sizing and add pikachu/ash animated sprites to homepage and sidebar menu

--- a/about.html
+++ b/about.html
@@ -101,11 +101,11 @@ description: "Learn more about my hobbies, interests, and background"
 				<h5>💪 Sports/Fitness</h5>
 				<p>Having been an athlete my whole life, fitness and team sports are some of my favorite
 					outlets for self-improvement and stress relief.
-					Moving to the Bay Area has been great for this, affording me a lot of access to:
+					Moving to the Bay Area has been great for my health, I've mainly been doing a lot of:
 				</p>
 				<li>🏐 Volleyball (weekly open gyms/tournies + sand courts at Stanford)</li>
 				<li>⛰ Hiking (More local trails than anyone could count!) </li>
-				<li>🏋 Weightlifting (Not unique, but something I've been taking more seriously lately)</li>
+				<li>🏋 Weightlifting (Nonunique, but something I've been taking more seriously lately)</li>
 			</ul>
 		</div>
 		<div id="writing">
@@ -130,13 +130,12 @@ description: "Learn more about my hobbies, interests, and background"
 			<div id="random">
 					<ul>
 						<h5> More++</h5>
-						<p>I'm thankful to be interested in so many different things, the biggest thing I wish for is more time
+						<p>I have so many interests (for better or for worse). Easily, the biggest thing I wish for is more time
 							in the day to be able to get around to all of them.
 						</p>
 						<li>🎖️ Coaching/Mentoring (Volleyball, Speech & Debate, Tech) </li>
 						<li>🚗 Working on my car (I bought it off a farm and rebuilt it over a summer!)</li>
 						<li>📺 Anime (Favorites: Neon Genesis Evangelion, Jojo's Bizarre Adventure, Code Geass, Gurren Lagann, Megalobox, Haikyuu!, My Hero Academia) </li>
-						
 					</ul>
 				</div>
 			
