small changes for first public launch, hiding about button on homepage due to mobile issues

--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@ description: "Learn more about my hobbies, interests, and background"
 				<ul>
 					<h5>✍ Content Creation</h5>
 					<p>Despite my job involving a solid amount of <a href="https://blog.datmo.com/" target="_blank">writing</a> and teaching for work, I've always been scared of losing my
-						informal communication abilities that I'd picked up through debate, research, and other avenues over the years.
+						informal communication abilities that I've picked up through debate, research, and other avenues over the years.
 						Blogging has helped me keep these skills sharp, and posting publically has helped me hold myself accountable. 
 					</p>
 					<li>🚫 <a href="https://medium.com/@nicholasmwalsh/twitter-cyber-harassment-deconstructed-aabd1eb9c5ce">Twitter Cyber Harassment, Deconstructed </a></li>
