update job 9 months after I've already started

--- a/about.html
+++ b/about.html
@@ -30,10 +30,9 @@ description: "Learn more about my hobbies, interests, and background"
 <h2>About Me</h2>
 <div id="blurb">
 	<p>Hey, I'm <b>Nick</b> -- a technologist, hacker, and engineer working to improve experiences for developers, building some cool things along the way.</p>
-	<p>Currently, I work as a <i>Developer Evangelist</i> at <a href="https://www.datmo.com">Datmo</a>, where we build developer tools for streamlining the process of training and deploying AI + machine learning models.</p>
+	<p>Currently, I work as a <i>Technical Evangelist</i> at <a href="https://aws.amazon.com/">Amazon Web Services</a>, helping developers more effectively utilize cloud computing.
 
-	<p>On weekends, I put on my <a href="https://mlh.io">Major League Hacking</a> hat and travel to hackathons across North America to mentor and empower student developers.
-	I've highlighted some of my favorite parts of these events <a href="https://stories.mlh.io/looking-back-at-a-year-of-life-changing-hackathons-fc64eec916d7">here</a> and <a href="https://medium.com/@nicholasmwalsh/highlights-from-another-year-of-hackathons-fb2a7ac7e170">here</a>.
+	<p>I particularly enjoy working with <a href="https://aws.amazon.com/machine-learning">AI + Machine Learning</a>, and always enjoy finding ways to incorporate my passion for gaming and esports into my work. I used to be a serial hackathon attendee while in college, and have written a bit about my experience at those events <a href="https://stories.mlh.io/looking-back-at-a-year-of-life-changing-hackathons-fc64eec916d7">here</a> and <a href="https://medium.com/@nicholasmwalsh/highlights-from-another-year-of-hackathons-fb2a7ac7e170">here</a>.
 	</p>
 
 </div>
@@ -74,26 +73,11 @@ description: "Learn more about my hobbies, interests, and background"
 					<i class="d2mh enigma"></i>	
 					<i>#NAdota</i>
 				)
-					<!-- Heroes
-					<li> 
-						<i class="d2mh legion_commander"></i>
-						<i class="d2mh juggernaut"></i>
-						<i class="d2mh luna"></i>
-						<i class="d2mh enigma"></i>
-					</li>
-					
-					Teams 
-					<li>Teams:
-						<i class="d2mh legion_commander"></i>
-						<i class="d2mh juggernaut"></i>
-						<i class="d2mh luna"></i>
-						<i class="d2mh enigma"></i>
-					</li>-->
 			</li>
 			<li>Counter Strike: Global Offensive</li>
 			<li>Fallout</li>
 			<li>League of Legends</li>
-			<li>World of Warcraft (not so much anymore, but will always have a place in my heart)</li>
+			<li>World of Warcraft (been getting back into Classic recently)</li>
 			</ul>
 		</div>
 		<div id="sports">
